# tocmake

./: CMakeLists.txt  README.md  run.bat
example/: example.sln
example/console_one/: console_one.cpp  console_one.vcxproj  console_one.vcxproj.filters  some.cpp  some.h
example/console_one/folder/: yoman.h
example/console_one/folder/yoman/: msg.h
example/console_two/: console_two.cpp  console_two.vcxproj  console_two.vcxproj.filters
include/: tocmake.hpp
include/pugixml/: pugiconfig.hpp  pugixml.hpp
include/tocmake/: argparser.hpp  cmake_generator.hpp  colorize.hpp  logging.hpp  project_reader.hpp  sln_reader.hpp  types.hpp  utils.hpp
src/: cmake_generator.cpp  project_reader.cpp  pugixml.cpp  sln_reader.cpp  tocmake.cpp
